deployment/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lake-liming
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  ingressClassName: nginx
  tls:
    - secretName: lake-liming-certificate
      hosts:
        - lake-liming.t.niva.no
  rules:
  - host: lake-liming.t.niva.no
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lake-liming
            port:
              name: http
